--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -5,8 +5,8 @@ metadata:
   description: "Inventory microservice for retail store"
   annotations:
     #argocd/app-selector: rht-gitops.com/janus-argocd=coolstore-inventory-quarkus-bootstrap
-    backstage.io/kubernetes-id: coolstore-inventory-quarkus
-    backstage.io/kubernetes-namespace: rhdh-demo
+    backstage.io/kubernetes-id: retail-store
+    backstage.io/kubernetes-namespace: retail-store
     #janus-idp.io/tekton: coolstore-inventory-quarkus
     backstage.io/source-location: url:https://github.com/manwendra-hotmail/techzone-demo.git
     backstage.io/techdocs-ref: url:https://github.com/manwendra-hotmail/techzone-demo.git
@@ -19,10 +19,10 @@ metadata:
     - demo
     - retailstore
   links:
-    - url: https://console-openshift-console.apps.cluster-bjwf7.sandbox185.opentlc.com/dev-pipelines/ns/coolstore-dev/
+    - url: https://console-openshift-console.apps.66a64ff6d70fa4001ee0caae.ocp.techzone.ibm.com/k8s/ns/retail-store/
       title: OpenShift Pipelines
       icon: web
-    - url: https://devspaces.apps.cluster-bjwf7.sandbox185.opentlc.com/#https://gitlab-gitlab.apps.cluster-bjwf7.sandbox185.opentlc.com/development/coolstore-inventory-quarkus
+    - url: https://console-openshift-console.apps.66a64ff6d70fa4001ee0caae.ocp.techzone.ibm.com/#https://github.com/manwendra-hotmail/techzone-demo.git
       title: OpenShift Dev Spaces (VS Code)
       icon: web
     - url: https://devspaces.apps.cluster-bjwf7.sandbox185.opentlc.com/#https://gitlab-gitlab.apps.cluster-bjwf7.sandbox185.opentlc.com/development/coolstore-inventory-quarkus?che-editor=che-incubator/che-idea/latest
