--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -1,60 +1,54 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: retail-store
-  description: "Inventory microservice for retail store"
+  name: deploy-app-pipeline
+  description: "Deploy App with OpenShift Pipeline"
   annotations:
     #argocd/app-selector: rht-gitops.com/janus-argocd=coolstore-inventory-quarkus-bootstrap
-    backstage.io/kubernetes-id: retail-store
-    backstage.io/kubernetes-namespace: retail-store
-    #janus-idp.io/tekton: coolstore-inventory-quarkus
-    backstage.io/source-location: url:https://github.com/manwendra-hotmail/techzone-demo.git
-    backstage.io/techdocs-ref: url:https://github.com/manwendra-hotmail/techzone-demo.git
-    #gitlab.com/project-slug: development/coolstore-inventory-quarkus
+    backstage.io/kubernetes-id: backstage
+    backstage.io/kubernetes-namespace: backstage
+    backstage.io/source-location: url:https://github.com/jay2tinku/techzone-pipeline-demo.git
+    backstage.io/techdocs-ref: url:https://github.com/jay2tinku/techzone-pipeline-demo.git
     quay.io/repository-slug: "quayadmin/coolstore-inventory-quarkus"
+    janus-idp.io/tekton: deploy-app-pipeline
+    tektonci/build-namespace: backstage
+    argocd/app-name: deploy-app-pipeline
   tags:
-    - java
-    - quarkus
-    - maven
+    - tekton
+    - pipeline
+    - tekton
     - demo
-    - retailstore
   links:
-    - url: https://console-openshift-console.apps.66a64ff6d70fa4001ee0caae.ocp.techzone.ibm.com/k8s/ns/retail-store/
+    - url: https://console-openshift-console.apps.66a64ff6d70fa4001ee0caae.ocp.techzone.ibm.com/dev-pipelines/ns/backstage
       title: OpenShift Pipelines
-      icon: web
-    - url: https://console-openshift-console.apps.66a64ff6d70fa4001ee0caae.ocp.techzone.ibm.com/#https://github.com/manwendra-hotmail/techzone-demo.git
-      title: OpenShift Dev Spaces (VS Code)
-      icon: web
-    - url: https://devspaces.apps.cluster-bjwf7.sandbox185.opentlc.com/#https://gitlab-gitlab.apps.cluster-bjwf7.sandbox185.opentlc.com/development/coolstore-inventory-quarkus?che-editor=che-incubator/che-idea/latest
-      title: OpenShift Dev Spaces (JetBrains IntelliJ)
       icon: web
 spec:
   type: service
   lifecycle: production
-  owner: "manwendra-hotmail"
-  system: retail-store
+  owner: "dev-hub-team"
+  system: pipeline
   providesApis:
-    - retail-store-api
+    - pipeline-api
 ---
 apiVersion: backstage.io/v1alpha1
 kind: System
 metadata:
-  name: retail-store
+  name: deploy-app-pipeline
   tags:
-    - retailstore
+    - pipeline
     - demo
 spec:
-  owner: "manwendra-hotmail"
+  owner: "dev-hub-team"
 ---
 apiVersion: backstage.io/v1alpha1
 kind: API
 metadata:
-  name: retail-store-api
-  description: "Inventory microservice for retail store"
+  name: deploy-app-pipeline-api
+  description: "Inventory microservice"
 spec:
   type: openapi
   lifecycle: production
-  owner: "manwendra-hotmail"
-  system: retail-store
+  owner: "dev-hub-team"
+  system: pipeline
   definition:
     $text: ./openapi.yaml
