--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -37,7 +37,7 @@ spec:
 apiVersion: backstage.io/v1alpha1
 kind: System
 metadata:
-  name: deploy-app-pipeline
+  name: backstage
   tags:
     - pipeline
     - demo
