--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -5,19 +5,19 @@ metadata:
   description: "Deploy App with OpenShift Pipeline"
   annotations:
     #argocd/app-selector: rht-gitops.com/janus-argocd=coolstore-inventory-quarkus-bootstrap
-    backstage.io/kubernetes-id: deploy-app-pipeline
+    backstage.io/kubernetes-id: backstage
     backstage.io/kubernetes-namespace: backstage
     janus-idp.io/tekton-enabled: 'true'
     backstage.io/kubernetes-label-selector: 'app=web'
     app.openshift.io/connects-to: '[{"apiVersion": apps/v1,"kind": Deployment}]'
     backstage.io/source-location: url:https://github.com/jay2tinku/techzone-pipeline-demo.git
     backstage.io/techdocs-ref: url:https://github.com/jay2tinku/techzone-pipeline-demo.git
-    janus-idp.io/tekton: deploy-app-pipeline
+    janus-idp.io/tekton: backstage
     tektonci/build-namespace: backstage
-    argocd/app-name: deploy-app-pipeline
+    argocd/app-name: backstage
     tekton.dev/pipeline: "true"
   labels:
-    backstage.io/kubernetes-id: deploy-app-pipeline
+    backstage.io/kubernetes-id: backstage
   tags:
     - tekton
     - pipeline
@@ -48,7 +48,7 @@ spec:
 apiVersion: backstage.io/v1alpha1
 kind: API
 metadata:
-  name: deploy-app-pipeline-api
+  name: backstage-api
   description: "Inventory microservice"
 spec:
   type: openapi
