--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -5,7 +5,7 @@ metadata:
   description: "Deploy App with OpenShift Pipeline"
   annotations:
     #argocd/app-selector: rht-gitops.com/janus-argocd=coolstore-inventory-quarkus-bootstrap
-    backstage.io/kubernetes-id: backstage
+    backstage.io/kubernetes-id: tekton-demo
     backstage.io/kubernetes-namespace: backstage
     janus-idp.io/tekton-enabled: 'true'
     backstage.io/kubernetes-label-selector: 'app=web'
@@ -18,7 +18,7 @@ metadata:
     argocd/app-name: backstage
     tekton.dev/pipeline: "true"
   labels:
-    backstage.io/kubernetes-id: backstage
+    backstage.io/kubernetes-id: tekton-demo
   tags:
     - tekton
     - pipeline
